# spacedrive

./: Cargo.toml  bun.lockb  package.json
.github/workflows/: ci.yml  release.yml
apps/cli/: Cargo.toml
apps/mobile/: metro.config.js  package.json
apps/mobile/android/: gradle.properties
apps/mobile/android/config/: detekt.yml
apps/mobile/modules/sd-mobile-core/android/: build.gradle
apps/mobile/modules/sd-mobile-core/core/: Cargo.toml
apps/mobile/modules/sd-mobile-core/core/src/: lib.rs
apps/mobile/modules/sd-mobile-core/ios/: build-rust.sh
apps/mobile/modules/sd-mobile-core/src/: index.ts
apps/mobile/src/app/: _layout.tsx
apps/mobile/src/app/(drawer)/(tabs)/: _layout.tsx
apps/mobile/src/app/device/: [deviceId].tsx
apps/mobile/src/app/location/: [locationId].tsx
apps/mobile/src/app/volume/: [volumeId].tsx
apps/mobile/src/client/: index.ts  transport.ts
apps/mobile/src/client/hooks/: useClient.tsx
apps/mobile/src/screens/browse/: BrowseScreen.tsx
apps/mobile/src/screens/device/: DeviceDetailsScreen.tsx
apps/mobile/src/screens/explorer/: LocationExplorerScreen.tsx
apps/mobile/src/screens/overview/: OverviewScreen.tsx
apps/mobile/src/screens/volume/: VolumeDetailsScreen.tsx
apps/server/: Cargo.toml
core/: Cargo.toml
core/src/domain/: device.rs  location.rs
core/src/ops/indexing/change_detection/: persistent.rs
core/src/ops/locations/add/: action.rs
core/src/ops/locations/trigger_job/: action.rs
core/src/ops/media/: mod.rs
core/src/ops/media/speech/: action.rs  mod.rs
core/src/volume/backend/: local.rs
core/src/volume/platform/: android.rs
core/tests/: event_system_test.rs
whitepaper/: spacedrive.tex
xtask/src/: config.rs  main.rs
(+6 files in other folders)
