[package]
name = "sd-mobile-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "sd_mobile_core"
crate-type = ["staticlib", "cdylib"]

[dependencies]
# Import the real Spacedrive core (FFmpeg and HEIF disabled for iOS build issues)
sd-core = { path = "../../../../../core", default-features = false }

# Minimal dependencies for mobile
anyhow = "1.0"
once_cell = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.40", features = ["macros", "rt", "rt-multi-thread", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.11", features = ["serde", "v4"] }
libc = "0.2"

[target.'cfg(target_os = "android")'.dependencies]
# For Android, we must use vendored OpenSSL since there's no system OpenSSL
# This adds build time but is required for cross-compilation
openssl = { version = "0.10", features = ["vendored"] }
jni = "0.21"
android_logger = "0.14"
log = "0.4"

# Patches for iOS compatibility (same as sd-ios-core)
[patch.crates-io]
iroh = { git = "https://github.com/n0-computer/iroh", rev = "e0c5091008d42f4c577f72b1085dfb26c28bd56f" }
netdev = { git = "https://github.com/shellrow/netdev", rev = "b6ef275d2a72143b3c7d5845ee2f5a70b0e97771" }

# Make this a standalone workspace so it can build independently
[workspace]

# Optimized release profile for mobile builds
# Faster compile times than full release (no LTO, parallel codegen)
[profile.release-mobile]
inherits = "release"
lto = false
codegen-units = 8
opt-level = 2
